--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
+name: forms
+
 services:
   app:
     build: .
-    container_name: formatos-app
+    container_name: forms-app
     ports:
       - "80:80"
     volumes:
@@ -11,7 +13,7 @@ services:
 
   db:
     image: mysql:8.0
-    container_name: formatos-db
+    container_name: forms-db
     ports:
       - "3306:3306"
     environment:
@@ -24,7 +26,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: formatos-phpmyadmin
+    container_name: forms-phpmyadmin
     ports:
       - "8081:80"
     environment:
